--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     font-family: 'Arial', sans-serif;
     height: 100vh;
     margin: 0;
+    padding: 0;
     background-color: #f0f8ff; /* パステルブルー */
 }
 
